Fix header when browsing with JS off or on mobile devices

--- a/themes/tjet-docs-theme/static/css/header.css
+++ b/themes/tjet-docs-theme/static/css/header.css
@@ -273,6 +273,15 @@ img.menuSocialIcon {
     }
 }
 
+.tabletButton {
+    display: none;
+}
+@media screen and (min-width: 500px) {
+    .tabletButton {
+        display: block;
+    }
+}
+
 .secondaryHeaderSectionDivider {
     height: 100%;
 }
